--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -27,7 +27,7 @@
     </div>
     <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
-        <p>I'm a UX Designer and an engineer. I'm bringing together my past experience in architecture and software engineering to build new futures.<br> I am passionate about mixed realities, and I'm not afraid of complexity.</p>
+        <p>I'm a UX Designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.<br> I'm passionate about mixed realities, and I embrace complexity.</p>
         <div class="logowrapper">
           <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
           <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
@@ -88,8 +88,7 @@
       <text x="2000" y="605" data-x-rel="-140" id="resumelink" class="projectname"><a href="aartics_resume.pdf">resume</a></text>
   </g>
   <g id="github_box" data-attach="#_51" class="attached raleway">    
-      <polygon id="_51" data-name="51" class="cls-2 project_box_soft has_link" points="2970.05 50.5 2875.95 50.5 2828.89 132 2875.95 213.5 2970.05 213.5 3017.11 132 2970.05 50.5"/>
-      <text x="2000" y="170" data-x-rel="-140" id="gitlink" class="projectname"><a href="https://github.com/aartics" target="_blank">my github</a></text>
+      <polygon id="_51" data-name="51" class="cls-2" points="2970.05 50.5 2875.95 50.5 2828.89 132 2875.95 213.5 2970.05 213.5 3017.11 132 2970.05 50.5"/>
   </g>
   <polygon id="s87" class="cls-1" points="2741.5 317.5 2781.5 255.5 3120.5 167.5 3060.5 272.5 2741.5 317.5"/>
   <polygon id="s90" class="cls-1" points="2853.5 255.5 2945.5 222.5 2990.5 300.5 2890.5 317.5 2853.5 255.5"/>
@@ -139,13 +138,14 @@
   <g id="barcelona_box" data-attach="#_27" class="attached">
       <polygon id="_27" data-name="27" class="cls-2 project_box_arch has_link" points="2165.32 146.5 2074.68 146.5 2029.36 225 2074.68 303.5 2165.32 303.5 2210.64 225 2165.32 146.5"/>
       <text x="2000" y="170" data-x-rel="-137" id="barctitle" class="casestudy csar"><a href="projects/barcelona">URBAN PLANNING:</a></text>
-      <text x="2000" y="250" data-x-rel="-155" id="barc1" class="projectname"><a href="projects/barcelona">la ciudad idea</a></text>
-      <text x="2000" y="270" data-x-rel="-140" id="barc2" class="projectname"><a href="projects/barcelona">barcelona</a></text>
+      <text x="2000" y="260" data-x-rel="-155" id="barc1" class="projectname"><a href="projects/barcelona">la ciudad idea</a></text>
+      <text x="2000" y="280" data-x-rel="-140" id="barc2" class="projectname"><a href="projects/barcelona">barcelona</a></text>
   </g>
   <g id="arch_dl_box" data-attach="#_28" class="attached">
       <polygon id="_28" data-name="28" class="cls-2 project_box_arch has_link" points="2324.42 215.5 2228.58 215.5 2180.66 298.5 2228.58 381.5 2324.42 381.5 2372.34 298.5 2324.42 215.5"/>
-      <text x="2000" y="240" data-x-rel="-137" id="arctitle" class="casestudy csar"><a href="projects/aartics_architecture.pdf">ARCHITECTURE:</a></text>
-      <text x="2000" y="340" data-x-rel="-135" id="arc1" class="projectname"><a href="projects/aartics_architecture.pdf">portfolio</a></text>
+      <text x="2000" y="240" data-x-rel="-140" id="msc1" class="casestudy csar"><a href="projects/assen">URBAN PLANNING:</a></text>
+      <text x="2000" y="340" data-x-rel="-160" id="msc2" class="projectname"><a href="projects/assen">city boulevard</a></text>
+      <text x="2000" y="360" data-x-rel="-125" id="msc3" class="projectname"><a href="projects/assen">assen</text>
   </g>
   <polygon id="yy4" class="cls-1" points="2530.5 539.5 2586.5 556.5 2637.5 645.5 2580.5 623.5 2530.5 539.5"/>
   <polygon id="_32" data-name="32" class="cls-2" points="2592.48 543.5 2499.52 543.5 2453.05 624 2499.52 704.5 2592.48 704.5 2638.95 624 2592.48 543.5"/>
@@ -163,9 +163,9 @@
   <polygon id="s55" class="cls-1" points="2506.5 293.5 2636.5 274.5 2514.5 274.5 2405.17 293.96 2506.5 293.5"/>
   <polygon id="s72" class="cls-1" points="2634.5 65.5 2624.5 133.5 2671.5 215.5 2694.5 170.5 2634.5 65.5"/>
   <g id="prodgraph" data-attach="#_31" class="attached">
-      <polygon id="_31" data-name="31" class="cls-2 nibbler" points="2636.12 64.5 2514.88 64.5 2454.26 169.5 2514.88 274.5 2636.12 274.5 2696.74 169.5 2636.12 64.5"/>
-      <text x="2000" y="170" data-x-rel="-175" id="grpd1" class="titleprod">products &amp;</text>
-      <text x="2000" y="190" data-x-rel="-165" id="grpd2" class="titleprod">graphics</text>
+      <polygon id="_31" data-name="31" class="cls-2 project_box_product has_link" points="2636.12 64.5 2514.88 64.5 2454.26 169.5 2514.88 274.5 2636.12 274.5 2696.74 169.5 2636.12 64.5"/>
+      <text x="2000" y="85" data-x-rel="-150" id="sport0" class="casestudy cspg"><a href="projects/allsportsbar">INTERIORS:</a></text>
+      <text x="2000" y="240" data-x-rel="-180" id="sport1" class="projectname"><a href="projects/allsportsbar">all sports bar</a></text>
   </g>
   <polygon id="s50" class="cls-1" points="1855.5 380.5 1743.5 380.5 1792.5 462.5 1916.5 486.5 1855.5 380.5"/>
 <!--   <polygon id="s29" class="cls-1" points="1683.5 567.5 1918.5 622.5 1965.5 703.5 1719.5 628.5 1683.5 567.5"/> -->
@@ -186,9 +186,10 @@
   </g>
   <polygon id="s59" class="cls-1" points="2354.5 381.5 2405.5 469.5 2306.5 453.5 2265.5 381.73 2354.5 381.5"/>
   <g id="sports_box" data-attach="#_35" class="attached">
-      <polygon id="_35" data-name="35" class="cls-2 project_box_product has_link" points="2506.52 293.96 2405.17 293.96 2354.5 381.73 2405.17 469.5 2506.52 469.5 2557.19 381.73 2506.52 293.96"/>
-      <text x="2000" y="315" data-x-rel="-130" id="sport0" class="casestudy cspg"><a href="projects/allsportsbar">INTERIORS:</a></text>
-      <text x="2000" y="440" data-x-rel="-160" id="sport1" class="projectname"><a href="projects/allsportsbar">all sports bar</a></text>
+      <polygon id="_35" data-name="35" class="cls-2 nibbler" points="2506.52 293.96 2405.17 293.96 2354.5 381.73 2405.17 469.5 2506.52 469.5 2557.19 381.73 2506.52 293.96"/>
+      <text x="2000" y="370" data-x-rel="-130" id="grpd0" class="ilike">i make</text>
+      <text x="2000" y="400" data-x-rel="-155" id="grpd1" class="interest">products &amp;</text>
+      <text x="2000" y="420" data-x-rel="-145" id="grpd2" class="interest">graphics</text>
   </g> 
   <polygon id="s38" class="cls-1" points="1845.5 466.5 1899.5 545.5 1997.5 626.5 1928.5 503.5 1845.5 466.5"/>
   <polygon id="s20" class="cls-1" points="1855.5 169.5 1635.5 237.5 1672.5 173.5 1916.5 64.5 1855.5 169.5"/>
@@ -228,10 +229,9 @@
   <polygon id="s100" class="cls-1" points="1480.5 204.5 1531.5 291.5 1455.5 314.5 1416.5 247.5 1480.5 204.5"/>
   <polygon id="s49" class="cls-1" points="1707.5 280.49 1660.5 288.49 1722.5 380.5 1764.5 379.99 1707.5 280.49"/>
   <g id="msc_urb_box" data-attach="#_22" class="attached raleway">
-      <polygon id="_22" data-name="22" class="cls-2 project_box_arch has_link" points="1895.52 292.5 1794.48 292.5 1743.96 380 1794.48 467.5 1895.52 467.5 1946.04 380 1895.52 292.5"/>
-      <text x="2000" y="310" data-x-rel="-147" id="msc1" class="casestudy csar"><a href="projects/assen">URBAN PLANNING:</a></text>
-      <text x="2000" y="425" data-x-rel="-165" id="msc2" class="projectname"><a href="projects/assen">city boulevard</a></text>
-      <text x="2000" y="445" data-x-rel="-130" id="msc3" class="projectname"><a href="projects/assen">assen</text>
+      <polygon id="_22" data-name="22" class="cls-2 nibbler" points="1895.52 292.5 1794.48 292.5 1743.96 380 1794.48 467.5 1895.52 467.5 1946.04 380 1895.52 292.5"/>
+      <text x="2000" y="370" data-x-rel="-135" id="arch1" class="ilike">i was an</text>
+      <text x="2000" y="400" data-x-rel="-145" id="arch2" class="interest">architect</text>
   </g>
   <g id="m_d_i_a_box" data-attach="#_13" class="attached raleway">
       <polygon id="_13" data-name="13" class="cls-2 nibbler" points="1461.44 379.5 1365.02 379.5 1316.82 463 1365.02 546.5 1461.44 546.5 1509.65 463 1461.44 379.5"/>
@@ -271,9 +271,9 @@
   <polygon id="s3" class="cls-1" points="1013.5 488.5 1075.5 596.5 1075.5 525.5 1034.5 453.5 1013.5 488.5"/>
   <polygon id="_3" data-name="3" class="cls-2" points="1013.07 488.5 888.93 488.5 826.87 596 888.93 703.5 1013.07 703.5 1075.13 596 1013.07 488.5"/>
   <g id="arch_urb_box" data-attach="#_24" class="attached">
-      <polygon id="_24" data-name="24" class="cls-2 nibbler" points="2038.91 64.5 1917.09 64.5 1856.18 170 1917.09 275.5 2038.91 275.5 2099.82 170 2038.91 64.5"/>
-      <text x="2000" y="170" data-x-rel="-190" id="arch1" class="titlearch">architecture &amp;</text>
-      <text x="2000" y="190" data-x-rel="-170" id="arch2" class="titlearch">urbanism</text>
+      <polygon id="_24" data-name="24" class="cls-2 project_box_arch has_link" points="2038.91 64.5 1917.09 64.5 1856.18 170 1917.09 275.5 2038.91 275.5 2099.82 170 2038.91 64.5"/>
+      <text x="2000" y="90" data-x-rel="-160" id="arctitle" class="casestudy csar"><a href="projects/aartics_architecture.pdf">ARCHITECTURE:</a></text>
+      <text x="2000" y="250" data-x-rel="-165" id="arc1" class="projectname"><a href="projects/aartics_architecture.pdf">portfolio</a></text>
   </g>
   <polygon id="xx05" class="cls-1" points="2580.5 556.5 2546.5 545.5 2594.5 462.5 2631.5 468.5 2580.5 556.5"/>
   <polygon id="_40" data-name="40" class="cls-2 project_box_product has_link" points="2734.09 468.5 2631.91 468.5 2580.81 557 2631.91 645.5 2734.09 645.5 2785.19 557 2734.09 468.5"/>
@@ -285,9 +285,10 @@
       <text x="2000" y="350" data-x-rel="-130" id="uda1" class="projectname"><a href="projects/octet">block</a></text>
   </g>
   <g id="ilikeopen" data-attach="#_46" class="attached">
-    <polygon id="_46" data-name="46" class="cls-2" points="2933.36 293.5 2832.33 293.5 2781.81 381 2832.33 468.5 2933.36 468.5 2983.88 381 2933.36 293.5"/>
-<!--     <text x="2000" y="320" data-x-rel="-100" class="ilike">i &hearts;</text> -->
-<!--     <text x="2000" y="340" data-x-rel="-100" class="interest">open source</text> -->
+    <polygon id="_46" data-name="46" class="cls-2 nibbler" points="2933.36 293.5 2832.33 293.5 2781.81 381 2832.33 468.5 2933.36 468.5 2983.88 381 2933.36 293.5"/>
+    <text x="2000" y="370" data-x-rel="-125" class="ilike" id="ab1">i am a</text>
+    <text x="2000" y="400" data-x-rel="-145" class="interest" id="ab2">software</text>
+    <text x="2000" y="420" data-x-rel="-145" class="interest" id="ab3">engineer</text>
   </g>
   <polygon id="s86" class="cls-1" points="2833.5 293.5 2939.5 273.5 3060.5 273.5 2934.5 293.5 2833.5 293.5"/>
   <g id="wolf_box" data-attach="#_18" class="attached" style="clip-path: url(#clipPath_wolf_box);" data-clip-path="#clipPath_wolf_box">
@@ -335,10 +336,8 @@
       <text x="2000" y="600" data-x-rel="-145" id="gra3" class="projectname"><a href="projects/graphics">graphics</a></text>
   </g>
   <g id="octet_box" data-attach="#_44" class="attached">
-      <polygon id="_44" data-name="44" class="cls-2 nibbler" points="3060.33 64.5 2939.67 64.5 2879.33 169 2939.67 273.5 3060.33 273.5 3120.67 169 3060.33 64.5"/>
-      <text x="2000" y="150" data-x-rel="-160" id="oct1" class="titleengg">software</text>
-      <text x="2000" y="170" data-x-rel="-180" id="oct2" class="titleengg">support &amp; qa</text>
-      <text x="2000" y="190" data-x-rel="-160" id="oct3" class="titleengg">engineer</text>
+      <polygon id="_44" data-name="44" class="cls-2 project_box_soft has_link" points="3060.33 64.5 2939.67 64.5 2879.33 169 2939.67 273.5 3060.33 273.5 3120.67 169 3060.33 64.5"/>
+      <text x="2000" y="230" data-x-rel="-170" id="gitlink" class="projectname"><a href="https://github.com/aartics">my github</a></text>
   </g>
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="3647.5 378.97 3498.56 636.95 3200.22 636.57 3050.84 378.78 3200.22 121 3498.56 121 3647.5 378.97"/>
