abouts and things

--- a/aartics/projects/coimbatore/index.htm
+++ b/aartics/projects/coimbatore/index.htm
@@ -34,11 +34,12 @@
     <span class="dropdown">
         <button class="dropbtn">Urban Design: Mall in Coimbatore</button>
         <div class="dropdown-content">
-          <a href="../aartics_architecture.pdf">Architecture Portfolio PDF</a>
-          <a href="../coimbatore">Architecture: Mall in Coimbatore</a>
-          <a href="../assen">Urban Design: City Boulevard, Assen</a>
-          <a href="../mumbai">Urban Design: Recentering Mumbai</a>
-          <a href="../barcelona">Urban Planning: Barcelona Idea</a>
+          <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
+          <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
+          <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
+          <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
+          <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
+          <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
           <a href="https://www.aartics.com">More projects</a>
         </div>
     </span>
