--- a/aartics/projects/graphics/index.htm
+++ b/aartics/projects/graphics/index.htm
@@ -13,7 +13,7 @@
   <style>
       #landing {
           height: 1350px;
-          background: url(local_img/001.png);
+          background: url(local_img/002.png);
           background-repeat: no-repeat;
           background-position: center 200px;
           background-color: #22313f;
@@ -34,11 +34,11 @@
     <span class="dropdown">
         <button class="dropbtn">Graphics: Miscellaneous</button>
         <div class="dropdown-content">
-          <a href="../bendy">Product: Shelter-Cart, New York</a>
+          <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
           <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
-          <a href="../octet">Product: Octet Truss Block</a>
-          <a href="../allsportsbar">Interiors: All Sports Bar</a>
-          <a href="../graphics">Graphics: Miscellaneous</a>
+          <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
+          <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
+          <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
           <a href="https://www.aartics.com">More projects</a>
         </div>
     </span>
@@ -78,7 +78,7 @@
 
   <script>
     if(window.innerHeight < window.innerWidth){
-        $("#landing").css({"height":"920px","background-size":"100%", "background-position": "center 50px"})
+        $("#landing").css({"height":"920px","background":"url(local_img/001.png)","background-size":"100%", "background-position": "center 50px"})
     }
   </script>
 </body>
