--- a/aartics/projects/octet/index.htm
+++ b/aartics/projects/octet/index.htm
@@ -34,11 +34,11 @@
     <span class="dropdown">
         <button class="dropbtn">Product: Octet Truss Block</button>
         <div class="dropdown-content">
-          <a href="../bendy">Product: Shelter-Cart, New York</a>
+          <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
           <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
-          <a href="../octet">Product: Octet Truss Block</a>
-          <a href="../allsportsbar">Interiors: All Sports Bar</a>
-          <a href="../graphics">Graphics: Miscellaneous</a>
+          <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
+          <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
+          <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
           <a href="https://www.aartics.com">More projects</a>
         </div>
     </span>
