--- a/aartics/projects/sfac/index.htm
+++ b/aartics/projects/sfac/index.htm
@@ -34,11 +34,11 @@
     <span class="dropdown">
         <button class="dropbtn">UX project: SF Arts Commission</button>
         <div class="dropdown-content">
-          <a href="../resonateai">UX project: Resonate.ai</a>
-          <a href="../aartics_story">UX project: 3D aartics.com</a>
-          <a href="../sfac">UX project: SF Arts Commission</a>
-          <a href="../wolflion">UX project: Wolf and Lion</a>
-          <a href="../karunavr">UX project: Karuna VR</a>
+          <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
+          <a href="https://www.aartics.com/projects/aartics_story">UX project: 3D aartics.com</a>
+          <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
+          <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
+          <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
           <a href="https://www.aartics.com">More projects</a>
         </div>
     </span>
