--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -341,21 +341,24 @@
   </g>
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="3647.5 378.97 3498.56 636.95 3200.22 636.57 3050.84 378.78 3200.22 121 3498.56 121 3647.5 378.97"/>
-      <text x="3000" y="270" data-x-rel="-500" id="credits13" class="credits">ABOUT:</text>
-      <text x="3000" y="295" data-x-rel="-500" id="credits11" class="creditsa"><a href="projects/aartics_story">prototyping 3D</a></text>
-      <text x="3000" y="315" data-x-rel="-500" id="credits12" class="creditsa"><a href="projects/aartics_story">in 2D</a></text>
-      <text x="3000" y="345" data-x-rel="-500" id="creditsa" class="credits">i designed and made this</text>
-      <text x="3000" y="365" data-x-rel="-500" id="credits0" class="credits">3d interactive prototype with:</text>
-      <text x="3000" y="385" data-x-rel="-500" id="credits1" class="credits">-------------------------------------</text>
-      <text x="3000" y="405" data-x-rel="-470" id="credits2" class="credits">sketchup</text>
-      <text x="3000" y="425" data-x-rel="-470" id="credits3" class="credits">photoshop | illustrator</text>
-      <text x="3000" y="445" data-x-rel="-470" id="credits4" class="credits">html | css</text>
-      <text x="3000" y="465" data-x-rel="-470" id="credits5" class="credits">javascript </text>
-      <text x="3000" y="485" data-x-rel="-470" id="credits5" class="credits">---------------------------------</text>
-      <text x="3000" y="505" data-x-rel="-470" id="credits7" class="credits"><a href="https://github.com/aartics/aartics_portfolio" target="_blank">get the files on github</a></text>
-      <text x="3000" y="525" data-x-rel="-470" id="credits9" class="credits">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
-      <text x="3000" y="545" data-x-rel="-470" id="credits10" class="credits">---------------------------------</text>
-      <text x="3000" y="565" data-x-rel="-470" id="credits14" class="credits">&copy; copyright aartics 2017</text>
+      <text x="3000" y="160" data-x-rel="-360" class="creds" id="credabme">ABOUT ME:</text>
+      <text x="3000" y="190" data-x-rel="-425" class="creds">i'm aarti c sharma, a designer/engineer.</text>
+      <text x="3000" y="210" data-x-rel="-450" class="creds">i have over 5 years of design experience as an</text>
+      <text x="3000" y="230" data-x-rel="-470" class="creds">architect, &amp; 3 years as a technical software engineer.</text>
+      <text x="3000" y="250" data-x-rel="-480" class="creds">now i design UX for VR, and aspire to create new futures.</text>
+      <text x="3000" y="270" data-x-rel="-500" class="creds">i like 3D, maps, models, data viz, open source technologies -- </text>
+      <text x="3000" y="290" data-x-rel="-520" class="creds">and most of all - collaborating enthusiastically with everyone involved.</text>
+      <text x="3000" y="320" data-x-rel="-430" class="creds" id="credcontact">contact me: <a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
+      <text x="3000" y="350" data-x-rel="-450" class="creds">---------------------------------------------------</a></text>
+      <text x="3000" y="380" data-x-rel="-405" class="creds" id="credabweb">ABOUT THIS WEBSITE:</text>
+      <text x="3000" y="410" data-x-rel="-460" class="creds">i designed and developed this 3D website with:</text>  
+      <text x="3000" y="430" data-x-rel="-500" class="creds">SKETCHUP : made a 3D model to take screenshots</text>
+      <text x="3000" y="450" data-x-rel="-500" class="creds">PHOTOSHOP + ILLUSTRATOR : made vector svgs from screenshots</text>
+      <text x="3000" y="470" data-x-rel="-500" class="creds">JAVASCRIPT + CSS + HTML : browser animation by scroll position</text>
+      <text x="3000" y="500" data-x-rel="-470" class="creds" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
+      <text x="3000" y="530" data-x-rel="-420" class="creds" id="credits9">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
+      <text x="3000" y="550" data-x-rel="-450" class="creds">---------------------------------------------------</a></text>
+      <text x="3000" y="580" data-x-rel="-390" class="creds">&copy; copyright aartics 2017</a></text>
   </g>                 
         </svg>
       </div>
