--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -14,12 +14,49 @@
 <body>
     <header>
       <ul id="ul_top_hypers">
-<!--         <li class="a_top_hypers"><button class="topbut" id="area1">About</button></li> -->
-        <li class="a_top_hypers"><button class="topbut" id="area2">UX Designer</button></li>
-        <li class="a_top_hypers"><button class="topbut" id="area3">Architect</button></li>
-        <li class="a_top_hypers"><button class="topbut" id="area4">Maker</button></li>
-        <li class="a_top_hypers"><button class="topbut" id="area5">Engineer</button></li>
-        <li class="a_top_hypers"><button class="topbut" id="area6">About</button></li>
+        <li class="a_top_hypers dropdown">
+            <button class="dropbtn" id="area2">UX Designer</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/resonateai">UX project: Resonate.ai</a>
+              <a href="https://www.aartics.com/projects/aartics_story">Web Dev: 3D aartics.com</a>
+              <a href="https://www.aartics.com/projects/sfac">UX project: SF Arts Commission</a>
+              <a href="https://www.aartics.com/projects/wolflion">UX project: Wolf and Lion</a>
+              <a href="https://www.aartics.com/projects/karunavr">UX project: Karuna VR</a>
+              <a href="https://www.aartics.com">More projects</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown">
+            <button class="dropbtn" id="area3">Architect</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/aartics_architecture.pdf">Architecture Portfolio PDF</a>
+              <a href="https://www.aartics.com/projects/aartics_urbanism.pdf">Urbanism Portfolio PDF</a>
+              <a href="https://www.aartics.com/projects/coimbatore">Architecture: Mall in Coimbatore</a>
+              <a href="https://www.aartics.com/projects/assen">Urban Design: City Boulevard, Assen</a>
+              <a href="https://www.aartics.com/projects/mumbai">Urban Design: Recentering Mumbai</a>
+              <a href="https://www.aartics.com/projects/barcelona">Urban Planning: Barcelona Idea</a>
+              <a href="https://www.aartics.com">More projects</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown">
+            <button class="dropbtn" id="area4">Maker</button>
+            <div class="dropdown-content">
+              <a href="https://www.aartics.com/projects/bendy">Product: Shelter-Cart, New York</a>
+              <a href="https://github.com/aartics/chess_models">Product: Chess of Thrones</a>
+              <a href="https://www.aartics.com/projects/octet">Product: Octet Truss Block</a>
+              <a href="https://www.aartics.com/projects/allsportsbar">Interiors: All Sports Bar</a>
+              <a href="https://www.aartics.com/projects/graphics">Graphics: Miscellaneous</a>
+              <a href="https://www.aartics.com">More projects</a>
+            </div>
+        </li>
+        <li class="a_top_hypers dropdown">
+            <button class="dropbtn" id="area5">Engineer</button>
+            <div class="dropdown-content">
+              <a href="https://github.com/aartics">My GitHub page</a>
+              <a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a>
+              <a href="aartics_resume.pdf">My Resume</a>
+            </div>
+        </li>
+        <li class="a_top_hypers"><button class="dropbtn" id="area6">About</button></li>
     </ul>
     </header>
     <div class="aarticslogo">
@@ -370,11 +407,11 @@
             </g>
             <defs>
               <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="95%" stop-color="#22313f"/>
-                <stop offset="5%" stop-color="#fff"/>
+                <stop offset="95%" stop-color="#fff"/>
+                <stop offset="5%" stop-color="#000000"/>
               </linearGradient>
               <linearGradient id="linear2" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="95%" stop-color="#22313f"/>
+                <stop offset="95%" stop-color="#fff"/>
                 <stop offset="5%" stop-color="#1EFC1E"/>
               </linearGradient>              
             </defs>
