--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -378,24 +378,24 @@
   </g>
   <g id="credits_box" data-attach="#c1" class="attached">
       <polygon id="c1" class="cls-2" points="3647.5 378.97 3498.56 636.95 3200.22 636.57 3050.84 378.78 3200.22 121 3498.56 121 3647.5 378.97"/>
-      <text x="3000" y="180" data-x-rel="-360" class="creds" id="credabme">ABOUT ME:</text>
-      <text x="3000" y="210" data-x-rel="-425" class="creds">i'm aarti c sharma, a designer/engineer.</text>
-      <text x="3000" y="230" data-x-rel="-450" class="creds">i have over 5 years of design experience as an</text>
-      <text x="3000" y="250" data-x-rel="-470" class="creds">architect, &amp; 3 years as a technical software engineer.</text>
-      <text x="3000" y="270" data-x-rel="-480" class="creds">now i design UX for VR, and aspire to create new futures.</text>
-      <text x="3000" y="290" data-x-rel="-500" class="creds">i like 3D, maps, models, data viz, open source technologies -- </text>
-      <text x="3000" y="310" data-x-rel="-520" class="creds">and most of all - collaborating enthusiastically with everyone involved.</text>
-      <text x="3000" y="340" data-x-rel="-430" class="creds" id="credcontact">contact me: <a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
-      <text x="3000" y="370" data-x-rel="-450" class="creds">---------------------------------------------------</a></text>
-      <text x="3000" y="400" data-x-rel="-405" class="creds" id="credabweb">ABOUT THIS WEBSITE:</text>
-      <text x="3000" y="430" data-x-rel="-460" class="creds">i designed and developed this 3D website with:</text>  
-      <text x="3000" y="450" data-x-rel="-500" class="creds">SKETCHUP : made a 3D model to take screenshots</text>
-      <text x="3000" y="470" data-x-rel="-500" class="creds">PHOTOSHOP + ILLUSTRATOR : made vector svgs from screenshots</text>
-      <text x="3000" y="490" data-x-rel="-500" class="creds">JAVASCRIPT + CSS + HTML : browser animation by scroll position</text>
-      <text x="3000" y="520" data-x-rel="-470" class="creds" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
+      <text x="3000" y="180" data-x-rel="-420" class="creds" id="credabme">ABOUT ME:</text>
+      <text x="3000" y="210" data-x-rel="-420" class="creds">i'm aarti c sharma, a designer/engineer.</text>
+      <text x="3000" y="230" data-x-rel="-420" class="creds">i have over 5 years of design experience as an</text>
+      <text x="3000" y="250" data-x-rel="-420" class="creds">architect, &amp; 3 years as a technical software engineer.</text>
+      <text x="3000" y="270" data-x-rel="-420" class="creds">now i design UX for VR, and aspire to create new futures.</text>
+      <text x="3000" y="290" data-x-rel="-420" class="creds">i like 3D, maps, models, data viz, open source technologies -- </text>
+      <text x="3000" y="310" data-x-rel="-420" class="creds">and most of all - collaborating enthusiastically with everyone involved.</text>
+      <text x="3000" y="340" data-x-rel="-420" class="creds" id="credcontact">contact me: <a href="mailto:aartics@gmail.com">aartics@gmail.com</a></text>
+      <text x="3000" y="370" data-x-rel="-420" class="creds">---------------------------------------------------</a></text>
+      <text x="3000" y="400" data-x-rel="-420" class="creds" id="credabweb">ABOUT THIS WEBSITE:</text>
+      <text x="3000" y="430" data-x-rel="-420" class="creds">i designed and developed this 3D website with:</text>  
+      <text x="3000" y="450" data-x-rel="-420" class="creds">SKETCHUP : made a 3D model to take screenshots</text>
+      <text x="3000" y="470" data-x-rel="-420" class="creds">PHOTOSHOP + ILLUSTRATOR : made vector svgs from screenshots</text>
+      <text x="3000" y="490" data-x-rel="-420" class="creds">JAVASCRIPT + CSS + HTML : browser animation by scroll position</text>
+      <text x="3000" y="520" data-x-rel="-420" class="creds" id="credlinks"><a href="projects/aartics_story">read the story &nbsp;</a> || <a href="https://github.com/aartics/aartics_portfolio" target="_blank">&nbsp;get the files on github</a></text>
       <text x="3000" y="550" data-x-rel="-420" class="creds" id="credits9">special shout-out to <a href="https://github.com/owings1" target="_blank">@owings1</a></text>
-      <text x="3000" y="570" data-x-rel="-450" class="creds">---------------------------------------------------</a></text>
-      <text x="3000" y="600" data-x-rel="-390" class="creds">&copy; copyright aartics 2017</a></text>
+      <text x="3000" y="570" data-x-rel="-420" class="creds">---------------------------------------------------</a></text>
+      <text x="3000" y="600" data-x-rel="-420" class="creds">&copy; copyright aartics 2017</a></text>
   </g>                 
         </svg>
       </div>
@@ -403,7 +403,6 @@
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" height="760px" viewBox="0 0 1200 760" id="halo">
             <g id="contact_box" data-attach="#_1" class="attached" style="clip-path: url(#clipPath_contact_box);" data-clip-path="#clipPath_contact_box">
                 <polygon id="_1" data-name="1" class="cls-2 contact_class" points="1077.5 380.72 903.01 682.95 553.5 682.5 378.5 380.5 553.5 78.5 903.01 78.5 1077.5 380.72"/>
-<!--                 <text x="1010" y="393" data-x-rel="-67" id="aarti">&#9900;&#9900;</text> -->
             </g>
             <defs>
               <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
@@ -413,6 +412,10 @@
               <linearGradient id="linear2" x1="0%" y1="0%" x2="100%" y2="0%">
                 <stop offset="95%" stop-color="#fff"/>
                 <stop offset="5%" stop-color="#1EFC1E"/>
+              </linearGradient>  
+              <linearGradient id="linear3" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="25%" stop-color="#000000"/>
+                <stop offset="25%" stop-color="#fff"/>
               </linearGradient>              
             </defs>
           </svg>
