beginnings of resonate v4

--- a/aartics/projects/resonateai_v4/index.htm
+++ b/aartics/projects/resonateai_v4/index.htm
@@ -2,14 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>aartics - resonate.ai</title>
 	<link href="https://fonts.googleapis.com/css?family=ABeeZee" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../aartics_projects_v4.css"/>
@@ -65,19 +64,37 @@
     <div class="aarticslogo">
         <img id="logo" width="40px" src="../../aartics_icon.png"/>
     </div>
-
-  	<div class="columnsContainer">
-
-	  	<div class="leftColumn">
-	  		<h2>Left Column (fluid)</h2>
-	  	</div>
-
-	  	<div class="rightColumn">
-	  		<h2>Right Column</h2>
-
-	  	</div>
-
-  	</div>
-
+	<div class="container-fluid">
+	  <div class="row">
+		<div class="col-sm-8" id="intro-text" style="background-color:lavender;">
+		<h1>RESONATE.AI</h1>
+		<p>Experience how machine learning and A.I. can help your tone sound more trustworthy and confident</p>
+		<p>Team-size: 3</p>
+		<p>Duration: 4 weeks</p>
+		</div>
+		<div class="col-sm-4" id="heroimage">hero image</div>
+	  </div>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-4 intro-tile" style="background-color:lightcyan;">		
+				<p class="boxtitle">PROBLEM</p>
+				<img src="local_img/icon_solution.png"/>
+				<p>Our client Resonate.ai approached us with a back-end machine learning algorithm that can analyze and detect the "tone" of any content. Our challenge was to design the experience for financial marketers to start using the product seamlessly.</p>
+			</div>
+			<div class="col-sm-4 intro-tile" style="background-color:lightgray;">
+				<p class="boxtitle">SOLUTION</p>
+				<img src="local_img/icon_solution.png"/>
+				<p>This handy tool helps you create dummy text for all your layout needs. 
+				We are gradually adding new functionality and we welcome your suggestions and feedback.
+				Please feel free to send us any additional dummy texts.</p>
+			</div>
+			<div class="col-sm-4 intro-tile" style="background-color:yellowgreen;">
+				<p class="boxtitle">PROCESS</p>
+				<img src="local_img/icon_solution.png"/>
+				<p> Research  |  Wireframe  | Product Design |  Prototype  |  Interaction Design  |  Visual Design </p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
