intro hero image and text added

--- a/aartics/projects/resonateai_v4/index.htm
+++ b/aartics/projects/resonateai_v4/index.htm
@@ -66,30 +66,42 @@
     </div>
 	<div class="container-fluid">
 	  <div class="row">
-		<div class="col-sm-8" id="intro-text" style="background-color:lavender;">
-		<h1>RESONATE.AI</h1>
-		<p>Experience how machine learning and A.I. can help your tone sound more trustworthy and confident</p>
-		<p>Team-size: 3</p>
-		<p>Duration: 4 weeks</p>
+		<div class="col-sm-4" id="intro-text">
+<!-- 		<img src="local_img/resonate_logo.png" id="intro-logo"/> -->
+		<h1>resonate.ai</h1>
+		<p>Experience how machine learning and A.I. can aid users sound more trustworthy and confident</p>
+				<div class="row">
+					<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
+						<img src="local_img/icon_solution.png"/>
+						<h6>Team size: 3</h6>
+					</div>
+					<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
+						<img src="local_img/icon_solution.png"/>
+						<h6>Duration: 4 weeks</h6>
+					</div>					
+				</div>
 		</div>
-		<div class="col-sm-4" id="heroimage">hero image</div>
+		<div class="col-sm-8" id="heroimage">
+			<img src="local_img/hero_resonate_3.png" id="heroimageimg"/>
+<!-- 			<img src="local_img/resonate.gif" id="heroimageimg"/> -->
+		</div>
 	  </div>
 	</div>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-4 intro-tile" style="background-color:lightcyan;">		
+			<div class="col-sm-4 intro-tile">		
 				<p class="boxtitle">PROBLEM</p>
 				<img src="local_img/icon_solution.png"/>
 				<p>Our client Resonate.ai approached us with a back-end machine learning algorithm that can analyze and detect the "tone" of any content. Our challenge was to design the experience for financial marketers to start using the product seamlessly.</p>
 			</div>
-			<div class="col-sm-4 intro-tile" style="background-color:lightgray;">
+			<div class="col-sm-4 intro-tile">
 				<p class="boxtitle">SOLUTION</p>
 				<img src="local_img/icon_solution.png"/>
 				<p>This handy tool helps you create dummy text for all your layout needs. 
 				We are gradually adding new functionality and we welcome your suggestions and feedback.
 				Please feel free to send us any additional dummy texts.</p>
 			</div>
-			<div class="col-sm-4 intro-tile" style="background-color:yellowgreen;">
+			<div class="col-sm-4 intro-tile">
 				<p class="boxtitle">PROCESS</p>
 				<img src="local_img/icon_solution.png"/>
 				<p> Research  |  Wireframe  | Product Design |  Prototype  |  Interaction Design  |  Visual Design </p>
