aartics_story_v4 added with hero gif included

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -61,7 +61,7 @@
     </div>
     <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
-        <p>I'm a UX Designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.<br> I'm passionate about mixed realities, and I embrace complexity.</p>
+        <p>I'm a UX Designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
         <div class="logowrapper">
           <a href="aartics_resume.pdf" class="logoc"><img src="img/resume.png"/></a>
           <a href="https://www.linkedin.com/in/aartics" class="logoc"><img src="img/linkedin.png"/></a>
