--- a/aartics/projects/aartics_story_v4/index.htm
+++ b/aartics/projects/aartics_story_v4/index.htm
@@ -68,16 +68,16 @@
 	  <div class="row">
 		<div class="col-sm-4" id="intro-text">
 <!-- 		<img src="local_img/resonate_logo.png" id="intro-logo"/> -->
-		<h1>resonate.ai</h1>
-		<p>Experience how machine learning and A.I. can aid users sound more trustworthy and confident</p>
+		<h1>aartics.com</h1>
+		<p>Experience the design process for a 3 dimensional website for a project gallery, viewed in a standard web browser</p>
 			<div class="row">
 				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
-					<img src="local_img/teamsize_icon.png"/>
-					<h6>Team size: 3</h6>
+					<img src="local_img/sandtimer_solid.png"/>
+					<h6>Team size: 1</h6>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
-					<img src="local_img/time_icon.png"/>
-					<h6>Duration: 4 weeks</h6>
+					<img src="local_img/sandtime.png"/>
+					<h6>Duration: 6 months</h6>
 				</div>					
 			</div>
 			<div class="row">
@@ -86,7 +86,7 @@
 		</div>
 		<div class="col-sm-8" id="heroimage">
 <!-- 			<img src="local_img/hero_resonate_3.png" id="heroimageimg"/> -->
-			<img src="local_img/res5.gif" id="heroimageimg"/>
+			<img src="local_img/aartics_story.gif" id="heroimageimg"/>
 		</div>
 	  </div>
 	</div>
