resonate_v4 in progress

--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -57,7 +57,8 @@
     </ul>
     </header>
     <div class="aarticslogo">
-        <img id="logo" width="40px" src="aartics_icon.png"/>
+        <!-- <img id="logo" width="40px" src="aartics_icon.png"/> -->
+        <p>aartics.com</p>
     </div>
     <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
