--- a/aartics/projects/karunavr_v4/index.htm
+++ b/aartics/projects/karunavr_v4/index.htm
@@ -68,8 +68,8 @@
 	  <div class="row">
 		<div class="col-sm-4" id="intro-text">
 <!-- 		<img src="local_img/resonate_logo.png" id="intro-logo"/> -->
-		<h1>aartics.com</h1>
-		<p>As a UX Designer and Front-end developer and AR enthusiast, I created a 3 dimensional website for a project gallery, viewed in a standard web browser</p>
+		<h1>karuna.vr</h1>
+		<p>As a UX Engineer intern, I helped to create the navigation menu scene for a Virtual Reality application for pain management</p>
 			<div class="row">
 				<div class="col-sm-6 col-md-6 col-lg-6 intro-icon">
 					<img src="local_img/sandtimer_solid.png"/>
@@ -86,7 +86,7 @@
 		</div>
 		<div class="col-sm-8" id="heroimage">
 <!-- 			<img src="local_img/hero_resonate_3.png" id="heroimageimg"/> -->
-			<img src="local_img/aartics_story.gif" id="heroimageimg"/>
+			<img src="local_img/karunagif.gif" id="heroimageimg"/>
 		</div>
 	  </div>
 	</div>
