header improvements for v4

--- a/aartics/projects/resonateai_v4/index.htm
+++ b/aartics/projects/resonateai_v4/index.htm
@@ -22,7 +22,7 @@
 <body>
     <header>
     <div class="aarticslogo">
-    	<p>aartics.com</p>
+    	<a class="aarticslogobtn" href="https://www.aartics.com"><img src="../../img/aarticslogo.png"/></a>
     </div>
       <ul id="ul_top_hypers">
         <li class="a_top_hypers dropdown">
@@ -368,6 +368,7 @@
 			<div class="col-xs-6 col-sm-6 col-md-2 footer-tile quatroeng">
 				<h3>engineering profile:</h3>
 				<ul>
+					<li><a href="https://www.aartics.com">My Website: aartics.com</a></li>
 					<li><a href="https://github.com/aartics">My GitHub</a></li>
 					<li><a href="https://www.linkedin.com/in/aartics">My LinkedIn Profile</a></li>
 					<li><a href="aartics_resume.pdf">My Resume</a></li>
