--- a/aartics/index.htm
+++ b/aartics/index.htm
@@ -13,6 +13,9 @@
 </head>
 <body>
     <header>
+    <div class="aarticslogo">
+        <a class="aarticslogobtn" href="https://www.aartics.com"><img src="img/aarticslogo.png"/></a>
+    </div>
       <ul id="ul_top_hypers">
         <li class="a_top_hypers dropdown">
             <button class="dropbtn" id="area2">UX Designer</button>
@@ -56,10 +59,6 @@
         <li class="a_top_hypers"><button class="dropbtn" id="area6">About</button></li>
     </ul>
     </header>
-    <div class="aarticslogo">
-        <!-- <img id="logo" width="40px" src="aartics_icon.png"/> -->
-        <p>aartics.com</p>
-    </div>
     <div class="child3" id="about">
         <h1>hello world, i'm aarti...</h1>
         <p>I'm a UX Designer and an engineer. <br>I'm bringing together my past experience in<br> architecture and software engineering to build new futures.</p>
